# egt-samples-contribution

./: CMakeLists.txt  README.md
sliderb/: .CMakeLists.txt.swp  CMakeLists.txt  LICENSE  README.md  custom_theme.h  main.cpp  sliderb.cpp  sliderb.h
sliderb/data/: sliderb.xml  ui.xml
